# repo-oracle

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  render.py  scanner.py  schema.py  test_render.py  test_scanner.py  test_schema.py  test_writer.py  writer.py
.github/workflows/: ci.yml
src/repo_oracle/: __init__.py  __main__.py  cli.py  render.py  scanner.py  schema.py  writer.py
src/repo_oracle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/repo_oracle/templates/: report.html.j2  report.md.j2
tests/: test_render.py  test_scanner.py  test_schema.py  test_security.py  test_writer.py
